--- a/Submission Documents/resumo.tex
+++ b/Submission Documents/resumo.tex
@@ -5,23 +5,24 @@
 	
 
 
-\noindent \textbf{T\'{i}tulo:} Passeios qu\^{a}nticos em criptografia e transi\c{c}\~{o}es de fase topol\'{o}gicas a temperature finita\\
-\textbf{Nome:} Chrysoula Vlachou\\
-\textbf{Doutoramento em:} F\'{i}sica\\
+\noindent \textbf{T\'{i}tulo:} Computa\c{c}\~{a}o Multipartid\'{a}ria Segura com Assist\^{e}ncia Qu\^{a}ntica\\
+\textbf{Nome:} Manuel Maria Trigueiros Sampaio Batalha dos Santos\\
+\textbf{Doutoramento em:} Seguran\c{c}a da Informa\c{c}\~{a}o\\
 \textbf{Orientador:} Paulo Alexandre Carreira Mateus\\
-\textbf{Co-Orientador:} Nikola Paunkovi\'c\\
+\textbf{Co-Orientador:} Armando Nolasco Pinto\\
 \vspace{2\baselineskip}
 
 \underline{\textbf{Resumo}}\\
+A criptografia quântica explora as propriedades da física quântica para robustecer os métodos criptográficos para além das abordagens clássicas. A distribuição quântica de chaves (QKD) tem sido um foco importante, mas os avanços em primitivas de dois participantes, como a transferência quântica oblívia (QOT), também oferecem desenvolvimentos para a computação segura quântica. Esta tese começa por apresentar uma revisão da literatura sobre QOT, abrangendo protocolos propostos, requisitos de segurança, resultados de impossibilidade e examinando condições para a segurança da QOT.
 
-\addcontentsline{toc}{section}{Resumo}
-A criptografia qu\^{a}ntica \'{e} uma das mais ativas \'{a}reas de investiga\c{c}\~{a}o, uma vez que se mostrou que a segurança de criptosistemas cl\'{a}ssicos atualmente em utiliza\c{c}\~{a}o ficam comprometidos face a advers\'{a}rios com acesso a computadores qu\^{a}nticos. Na primeira parte desta tese, propomos novos e seguros criptosistemas qu\^{a}nticos baseados em passeios qu\^{a}nticos. Estes \'{u}ltimos t\^{e}m-se vindo a revelar de grande utilidade para diversas tarefas de computa\c{c}\~{a}o qu\^{a}ntica. Em particular, apresentamos um criptosistema qu\^{a}ntico de chave p\'{u}blica seguro, como alternativa aos an\'{a}logos cl\'{a}ssicos, cuja seguran\c{c}a cai por terra face a advers\'{a}rios qu\^{a}nticos. Propomos ainda tr\^{e}s novos protocolos qu\^{a}nticos de distribui\c{c}\~{a}o de chave e analisamos as suas propriedades de seguran\c{c}a e robustez.
-A cria\c{c}\~{a}o de mem\'{o}rias qu\^{a}nticas est\'{a}veis de longa dura\c{c}\~{a}o é hoje em dia um dos maiores obst\'{a}culos tecnol\'{o}gicos na constru\c{c}\~{a}o de computadores qu\^{a}nticos escal\'{a}veis, e a sua exist\^{e}ncia ou n\~{a}o tem consequ\^{e}ncias s\'{e}rias em ambas a criptografia cl\'{a}ssica e a criptografia qu\^{a}ntica. Na segunda parte desta tese, estudamos o comportamento, a temperatura finita, de sistemas exibindo ordem topol\'{o}gica, j\'{a} que possuem propriedades \'{u}nicas que podem permitir a constru\c{c}\~{a}o de mem\'{o}rias qu\^{a}nticas. Utilizando a fidelidade entre dois estados qu\^{a}nticos e a condi\c{c}\~{a}o de transporte paralelo de Uhlmann no espa\c{c}o das purifica\c{c}\~{o}es de matrizes densidade, investigamos a exist\^{e}ncia de transi\c{c}\~{o}es de fase topol\'{o}gicas a temperatura finita. Provamos ainda a robustez, em fun\c{c}\~{a}o da temperatura, dos estados de fronteira entre duas fases topol\'{o}gicas distintas. Esta an\'{a}lise mostra que n\~{a}o existem transi\c{c}\~{o}es t\'{e}rmicas de fase e que as propriedades topol\'{o}gicas, presentes a temperatura zero, desaparecem gradualmente \`{a} medida que a temperatura sobe. O nosso estudo dos modos de Majorana (estados de fronteira de supercondutores topol\'{o}gicos), a temperatura baixa mas finita, sugere que podem ser realisticamente utilizados para produzir mem\'{o}rias qu\^{a}nticas.
-Aplicamos ainda a mesma an\'{a}lise aos Hamiltonianos efetivos provenientes de protocolos de passeios qu\^{a}nticos que se sabe simularem fases topol\'{o}gicas. Os resultados obtidos condizem com os anteriores, indicando a n\~{a}o exist\^{e}ncia de transi\c{c}\~{o}es t\'{e}rmicas de fase. Para mais, neste caso, a nossa an\'{a}lise revela a exist\^{e}ncia de transi\c{c}\~{o}es param\'{e}tricas de fase a temperatura finita, devido \`{a} periodicidade temporal dos protocolos de passeios qu\^{a}nticos.
-Finalmente, investigamos a exist\^{e}ncia de transi\c{c}\~{o}es de fase a temperatura finita em sistemas topol\'{o}gicos fora de equil\'{i}brio. Ainda hoje existem duas formas de inferir a possibilidade de transi\c{c}\~{o}es de fase a temperatura finita para tais sistemas, que levam a resultados contradit\'{o}rios. Derivamos analiticamente as quantidades em causa e identificamos a origem do paradoxo. Discutimos ainda qual dos m\'{e}todos melhor captura a natureza multi-corporal de sistemas topol\'{o}gicos e pode ser utilizado em implementa\c{c}\~{o}es reais.
+A transferência oblívia (OT) desempenha um papel crucial na computação segura multipartidária (SMC), prometendo avanços na análise de dados e privacidade na computação. A tese avalia a complexidade da OT quântica em comparação com dois protocolos OT clássicos, lançando luz sobre benefícios e limitações potenciais para a segurança e eficiência da SMC.
+
+Expandindo a análise teórica da transferência oblívia quântica e clássica, a tese integra ambas num sistema de computação segura multipartidária para análise de genoma. Usando protocolos criptográficos quânticos, o sistema proposto melhora a privacidade do calculo de uma árvore filogenética a partir de sequências privadas de genoma. Três protocolos criptográficos quânticos são integrados para fortalecer a segurança contra ataques quânticos. Incluímos uma análise de complexidade, uma prova de segurança e detalhes da implementação. A avaliação do sistema quântico em comparação com uma solução exclusivamente clássica mostra tempos de execução semelhantes, com a abordagem quântica introduzindo um aumento de tempo devido ao sistema de gestão de chaves oblívias.
+
+A tese apresenta o primeiro protocolo quântico para avaliação linear oblívia, uma forma generalizada de transferência oblívia. Nesse cenário, as dua partes, Alice e Bob, calculam colaborativamente uma função linear sem revelar as suas entradas. Enquanto os métodos clássicos dependem da transferência oblívia, a tese propõe um novo protocolo quântico independente da transferência quântica oblívia. O protocolo utiliza estados quânticos de alta dimensão para calcular a função linear em corpos de Galois, estendendo-se de configurações semi-honestas para desonestas usando uma estratégia de compromisso e abertura. A segurança é rigorosamente comprovada no contexto da composabilidade universal quântica, e o protocolo é generalizado para avaliação linear oblívia de vetores, melhorando a eficiência.
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, passeios qu\^{a}nticos, mem\'{o}rias qu\^{a}nticas, transi\c{c}\~{o}es de fase topol\'{o}gicas, estados de fronteira
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
 \end{flushleft}
 \end{document}
